// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: text with formatting 1`] = `
{
  "15b3frk": {
    "items": [
      {
        "key": "\x00",
        "type": "Format",
        "value": null,
      },
      {
        "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00",
        "type": "String",
      },
      {
        "key": "\x00",
        "type": "Format",
        "value": null,
      },
      {
        "str": "\x00\x00\x00\x00\x00\x00\x00\x00",
        "type": "String",
      },
    ],
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: map with keys 1`] = `
{
  "fysleu": {
    "mapKeys": {
      "3772uq": {
        "type": "Any",
        "values": [
          null,
        ],
      },
      "377iah": {
        "type": "Any",
        "values": [
          null,
        ],
      },
      "ri95v9": {
        "type": "Any",
        "values": [
          null,
        ],
      },
      "yknfwm": {
        "type": "Any",
        "values": [
          null,
        ],
      },
    },
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: nested map 1`] = `
{
  "59z40m": {
    "mapKeys": {
      "4k2fbs": {
        "childType": "YMap",
        "type": "Type",
      },
    },
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: array 1`] = `
{
  "1hmepa9": {
    "items": [
      {
        "type": "Any",
        "values": [
          null,
          null,
          null,
          null,
          null,
        ],
      },
    ],
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: array with nested shared type 1`] = `
{
  "1tazgy5": {
    "items": [
      {
        "childType": "YText",
        "children": {
          "items": [
            {
              "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00",
              "type": "String",
            },
          ],
        },
        "type": "Type",
      },
    ],
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: xml with elements and attributes 1`] = `
{
  "10iouzp": {
    "items": [
      {
        "childType": "YXmlElement",
        "children": {
          "items": [
            {
              "childType": "YXmlElement",
              "children": {
                "items": [
                  {
                    "childType": "YXmlText",
                    "children": {
                      "items": [
                        {
                          "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00",
                          "type": "String",
                        },
                      ],
                    },
                    "type": "Type",
                  },
                ],
              },
              "type": "Type",
            },
          ],
          "mapKeys": {
            "485azf": {
              "type": "Any",
              "values": [
                null,
              ],
            },
            "j3fj4r": {
              "type": "Any",
              "values": [
                null,
              ],
            },
          },
        },
        "type": "Type",
      },
    ],
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: embed 1`] = `
{
  "4fzngu": {
    "items": [
      {
        "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00",
        "type": "String",
      },
      {
        "type": "Embed",
      },
    ],
  },
}
`;

exports[`content-cipher metadata strings are not leaked in structure update server sees only opaque structure: comprehensive document 1`] = `
{
  "10iouzp": {
    "items": [
      {
        "childType": "YXmlElement",
        "children": {
          "items": [
            {
              "childType": "YXmlElement",
              "children": {
                "items": [
                  {
                    "childType": "YXmlText",
                    "children": {
                      "items": [
                        {
                          "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00",
                          "type": "String",
                        },
                      ],
                    },
                    "type": "Type",
                  },
                ],
              },
              "type": "Type",
            },
          ],
          "mapKeys": {
            "485azf": {
              "type": "Any",
              "values": [
                null,
              ],
            },
            "j3fj4r": {
              "type": "Any",
              "values": [
                null,
              ],
            },
          },
        },
        "type": "Type",
      },
    ],
  },
  "15b3frk": {
    "items": [
      {
        "key": "\x00",
        "type": "Format",
        "value": null,
      },
      {
        "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00",
        "type": "String",
      },
      {
        "key": "\x00",
        "type": "Format",
        "value": null,
      },
      {
        "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00",
        "type": "String",
      },
      {
        "type": "Embed",
      },
    ],
  },
  "1hmepa9": {
    "items": [
      {
        "type": "Any",
        "values": [
          null,
          null,
          null,
          null,
          null,
        ],
      },
    ],
  },
  "1tazgy5": {
    "items": [
      {
        "childType": "YText",
        "children": {
          "items": [
            {
              "str": "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00",
              "type": "String",
            },
          ],
        },
        "type": "Type",
      },
    ],
  },
  "fysleu": {
    "mapKeys": {
      "3772uq": {
        "type": "Any",
        "values": [
          null,
        ],
      },
      "377iah": {
        "type": "Any",
        "values": [
          null,
        ],
      },
      "8n590r": {
        "childType": "YMap",
        "type": "Type",
      },
      "ri95v9": {
        "type": "Any",
        "values": [
          null,
        ],
      },
      "yknfwm": {
        "type": "Any",
        "values": [
          null,
        ],
      },
    },
  },
}
`;
